k8s-lab/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
    name: bookstore-lab
    labels: 
        app.kubernetes.io/part-of: bookstore-lab
