k8s-lab/02-pod.yaml
apiVersion: v1
kind: Pod
metadata:
    name: testpod
    labels:
        app.kubernetes.io/name: testpod
    namespace: bookstore-lab
spec:
    containers:
        - name: testpod
          image: bookstore:20260826-0839
          ports:
           - containerPort: 8000
