k8s-lab/04-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: servicetest
    namespace: bookstore-lab
    labels: 
        app/name: service-test
spec:
    selector: 
      app.kubernetes.io/name: testdeploy
    type: NodePort
    ports:
      - port: 80
        targetPort: 8000
        nodePort: 30900
