k8s-lab/07-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: labingress
  namespace: bookstore-lab

spec:
  rules:
    - http:
        paths:
          - path: /books
            pathType: Prefix 
            backend:
              service:
                name: servicetest
                port:
                  number: 80
